crates/compiler/tests/parse_errors/port_annotation.elm
port module Main exposing (..)

port foo 
